implemented the functionalities

--- a/index.html
+++ b/index.html
@@ -38,13 +38,17 @@
           <div class="check">Check!</div>
         </div>
         <div>
-          <div class="div_start">Start guessing...let's go🏋️‍♂️</div>
-          <div class="div_score">💯 Score: <span>20</span></div>
-          <div class="div_score">🥇 Highest Score: <span>0</span></div>
+          <div class="div_start me">Start guessing...let's go🏋️‍♂️</div>
+          <div class="div_score">
+            <div>💯 Score: <span class="score_span"></span></div>
+            <div class="div_highest_score">
+              🥇 Highest Score: <span class="highScore">0</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <script src="./dom.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
